# arbitrage

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  PRD.md  README.md  alembic.ini  docker-compose.yml  implementationplan.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
config/: risk.yaml  strategies.yaml  universe.yaml
deploy/: README.md  bootstrap.sh
deploy/prometheus/: alertmanager.yml  alerts.yml  docker-compose.yml  prometheus.yml
deploy/systemd/: quant-runner-live.service  quant-runner.service  quant-runner.timer  quant-scheduler.service
docs/: day_one_retrospective.md  disaster_recovery.md  gate4_checklist.md  go_live_checklist.md  journal.md  scaling_plan.md  strategy_template.md
docs/research/: week13_validation.md
docs/strategies/: mean_reversion.md  momentum.md  trend.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: backfill.py  bootstrap_validation.py  check_strategy_artifacts.py  paper_vs_backtest.py  preflight_live.py  research_sprint.py  review.py  run_backtest.py  train_regime.py  validate_new_strategy.py  validate_strategy.py
src/quant/: __init__.py  config.py  types.py
src/quant/backtest/: __init__.py  bootstrap.py  deflated_sharpe.py  engine.py  reports.py  trial_log.py  walk_forward.py
src/quant/data/: __init__.py  cache.py  loaders.py  pipeline.py
src/quant/execution/: __init__.py  alpaca_broker.py  (+3 more)
tests/integration/: test_alpaca_broker.py  test_live_runner.py  test_storage_roundtrip.py
tests/unit/: test_alpaca_broker.py  test_backtest_engine.py  test_bootstrap.py  test_config.py  test_data_cache.py  test_data_loaders.py  test_data_pipeline.py  test_deflated_sharpe.py  test_deploy_scripts.py  test_features_benchmark.py  test_features_cross_sectional.py  test_features_regime.py  test_features_technical.py  test_full_cycle_e2e.py  test_hmm_regime.py  test_killswitch_chaos.py  test_live_portfolio.py  test_live_runner.py  test_monitoring.py  test_no_lookahead.py  test_order_manager.py  test_paper_5day.py  test_paper_broker.py  test_portfolio_combiner.py  test_risk_drawdown.py  test_risk_killswitch.py  test_risk_limits.py  test_security_regressions.py  test_signals_mean_reversion.py  test_signals_momentum.py  test_signals_trend.py  test_smoke.py  test_trial_log.py  test_types.py  test_volatility_vol_target.py  test_walk_forward.py  test_wave14_acceptance.py  test_wave19_pre_live.py  test_wave20_go_live.py
(+33 files in other folders)
