[project]
name = "quant-system"
version = "0.1.0"
description = "Solo-developer systematic trading system for US ETFs — daily-bar strategies run via Alpaca."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Solo developer" }]

dependencies = [
    # Data & computation
    "pandas>=2.2,<3.0",
    "numpy>=2.0,<3.0",
    "polars>=1.0,<2.0",
    "pyarrow>=16.0",
    "numba>=0.60",

    # Financial libraries
    "vectorbt>=0.26",
    "pandas-ta>=0.3.14b0",
    "scipy>=1.13",
    "statsmodels>=0.14",

    # Machine learning
    "scikit-learn>=1.5",
    "hmmlearn>=0.3",
    "xgboost>=2.0",
    "lightgbm>=4.3",

    # Broker / data APIs
    "alpaca-py>=0.30",
    "yfinance>=0.2.40",

    # Config & validation
    "pydantic>=2.9",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",

    # Web / networking
    "httpx>=0.27",
    "tenacity>=9.0",

    # Database
    "psycopg[binary,pool]>=3.2",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "greenlet>=3.0",  # required by sqlalchemy async; not auto-pulled on some platforms

    # Scheduling
    "APScheduler>=3.10",

    # Logging & monitoring
    "loguru>=0.7",
    "prometheus-client>=0.20",
    "sentry-sdk>=2.10",

    # Notifications
    "discord-webhook>=1.3",

    # CLI helpers
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "pre-commit>=3.8",
    "types-PyYAML",
]

notebook = [
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: tests that hit real external services (Alpaca paper, Postgres)",
    "slow: tests that take >5 seconds",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/quant"]
branch = true
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
